feat(impl):[TRI-1195] partial of code smells fixed