@@ -26,7 +26,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -67,7 +66,7 @@ public class QueryBatchService {
         return BatchOrderResponse.builder()
                                  .orderId(batchOrderId)
                                  .state(batchOrder.getBatchOrderState())
-                                 .batches(batches.stream().map(this::toResponse).collect(Collectors.toList()))
+                                 .batches(batches.stream().map(this::toResponse).toList())
                                  .build();
     }
 
